<resources>
    <string name="title_projects">Projects</string>
    <string name="title_latestactivity">Activity</string>
    <string name="title_myaccount">My Account</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_recent_update">The project has no recent update</string>
    <string name="add_project">Add Project</string>
    <string name="you">You</string>
    <string name="is_this_user_an_administrator">Is this user an Administrator</string>
    <string name="administrator">Administrator</string>
    <string name="can_add_projects">Can Add Projects?</string>
    <string name="projects">Projects</string>
    <string name="can_preview_files">Can preview files</string>
    <string name="email_notifications">Email notification</string>
    <string name="permissions">Permissions</string>
    <string name="preferences">Preferences</string>
    <string name="not_developed_yet">Functionality not developed yet!</string>
    <string name="more_buttons">More buttons</string>
    <string name="user_avatar">User avatar</string>
    <string name="star_icon">Star icon</string>
    <string name="info_button">Info button</string>
</resources>
