<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:paddingLeft="@dimen/normal_margin_sides"
    android:paddingRight="@dimen/normal_margin_sides">

    <androidx.cardview.widget.CardView
        android:id="@+id/layCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGrey"
                android:paddingLeft="@dimen/inside_cart_padding_left_right"
                android:paddingTop="@dimen/inside_cart_padding_top_bottom"
                android:paddingRight="@dimen/inside_cart_padding_left_right"
                android:paddingBottom="@dimen/inside_cart_padding_top_bottom">

                <ImageView
                    android:id="@+id/ivStar"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@android:drawable/star_big_off"
                    android:contentDescription="@string/star_icon" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/ivUserAvatar"
                    android:layout_toEndOf="@+id/ivStar"
                    android:maxLines="2"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"
                    tools:text="Build Cork's Events Centre" />

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvName"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/ivStar"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    tools:text="(Cat)" />

                <ImageView
                    android:id="@+id/ivUserAvatar"
                    android:layout_width="@dimen/user_avatar_size"
                    android:layout_height="@dimen/user_avatar_size"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/user_avatar"
                    tools:background="@color/colorAccent" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/inside_cart_padding_left_right"
                android:paddingTop="@dimen/inside_cart_padding_top_bottom"
                android:paddingRight="@dimen/inside_cart_padding_left_right"
                android:paddingBottom="@dimen/inside_cart_padding_top_bottom">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgTags"
                    android:layout_width="match_parent"
                    app:chipSpacingVertical="4dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="13sp"
                    android:text="@string/no_recent_update" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_menu_info_details"
                        android:contentDescription="@string/info_button" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_medium"
                        android:maxLines="3"
                        android:textSize="14sp"
                        tools:text="Cork need an events centre, this project details what need to be done to attach." />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layUserAvatars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/users_avatar_margins"
                    android:orientation="horizontal" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>